switch to webpack + some improvements

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
-    <script defer src="https://unpkg.com/alpinejs@3.8.1/dist/cdn.min.js"></script>
 
     <!-- favicons -->
     <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
@@ -34,7 +33,7 @@
         <div class="loading-screen"></div>
     </div>
 
-    <div class="container h-min sm:ml-8 md:ml-0">
+    <div class="h-min">
         <nav class=" max-w-7xl mx-auto px-8 md:flex md:items-center md:justify-between" x-data="{ navBar: false }">
             <div class="flex justify-between items-center h-24">
                 <a href="https://milindgoel15.github.io">
@@ -82,17 +81,17 @@
         </nav>
 
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="contact">
-            <h2 class="font-extrabold text-4xl py-8 text-white mainContent">Connect with me</h2>
+            <h2 class="font-extrabold text-4xl py-8 xl:mx-110 2xl:mx-128 text-white mainContent">Connect with me</h2>
 
             <div class="flex justify-center">
 
-                <div class="grid grid-rows-6 gap-4 lg:grid-col-2 lg:grid-rows-3 lg:grid-flow-col lg:gap-4">
+                <div class="grid grid-rows-6 gap-4 sm:grid-cols-2 sm:grid-rows-3 sm:mt-6 sm:gap-8 lg:grid-col-2 lg:grid-rows-3 lg:grid-flow-col lg:gap-12">
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
                                     viewBox="0 0 249.53 250.18">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -115,9 +114,9 @@
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" viewBox="0 0 272 194">
                                     <g id="Layer_2" data-name="Layer 2">
                                         <g id="Layer_1-2" data-name="Layer 1">
@@ -143,9 +142,9 @@
                     <a href="http://github.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
                                     viewBox="0 0 243.3 259.9">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -168,9 +167,9 @@
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
                                     viewBox="0 0 168.3 147.57">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -192,9 +191,9 @@
                     <a href="http://youtube.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
                                     viewBox="0 0 212.94 156.26">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -217,9 +216,9 @@
                     <a href="http://instagram.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-20 sm:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
 
-                            <div class="md:pl-2.5 pt-1.5">
+                            <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
                                     viewBox="0 0 263.48 263.49">
                                     <g id="Layer_2" data-name="Layer 2">
@@ -249,13 +248,8 @@
 
     <div class="cursor-dot-outline"></div>
     <div class="cursor-dot"></div>
+    <script src="./dist/bundle.js"></script>
 
-    <script src="./js/snowflakes.js"></script>
-    <script src="./js/kursor.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-    <script src="https://unpkg.com/@barba/core"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="./js/barba.js"></script>
 </body>
 
 </html>
