--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
         </nav>
 
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="contact">
-            <h2 class="font-extrabold text-4xl py-8 xl:mx-110 2xl:mx-128 text-white mainContent">Connect with me</h2>
+            <h2 class="font-extrabold text-4xl py-8 xl:mx-110 text-white mainContent">Connect with me</h2>
 
             <div class="flex justify-center">
 
