--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
