--- a/works.html
+++ b/works.html
@@ -64,19 +64,19 @@
 
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
