proper classname for cursor hover  anim

--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
 
         <!-- content goes here -->
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="home">
-            <h2 class="font-extrabold text-6xl py-5 xl:mx-40 2xl:mx-80 lg:text-8xl text-white md:text-6xl mainContent">
+            <h2 class="font-extrabold text-6xl py-5 xl:mx-40 2xl:mx-80 lg:text-8xl text-white md:text-6xl cursorHover">
                 Hi! I'm Milind Goel
             </h2>
-            <p class="text-xl text-white py-8 px-3 xl:mx-80 2xl:mx-110 md:text-2xl mainContent">
+            <p class="text-xl text-white py-8 px-3 xl:mx-80 2xl:mx-110 md:text-2xl cursorHover">
                 a Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
                 <button
-                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 mainContent">
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">
                     CONNECT WITH ME
                 </button>
             </a>
 
-            <p class="text-slate-300 footer mt-20 mainContent">
+            <p class="text-slate-300 footer mt-20 cursorHover">
                 Made with <span class="text-red-600">❤</span> by
                 <span class="text-blue-600">Milind Goel</span>
             </p>
