--- a/skills.html
+++ b/skills.html
@@ -84,13 +84,13 @@
 
         <!-- content goes here -->
         <div class="py-32 text-center cursor-none" data-barba="container" data-barba-namespace="skills">
-            <h2 class="font-extrabold text-4xl py-1 xl:mx-110 2xl:mx-128 text-white mainContent">Skills</h2>
+            <h2 class="font-extrabold text-4xl py-1 xl:mx-110 2xl:mx-128 text-white cursorHover">Skills</h2>
 
             <div class="flex justify-center">
 
                 <div class="grid grid-rows-5 gap-2 sm:grid-cols-2 sm:grid-rows-3 sm:mx-14 sm:mt-12 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
-                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent sm:order-1 lg:order-1" x-intersect="$el.classList.add('fadeInUp')">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-1 lg:order-1" x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Designing</h2>
                         <p class="text-lg text-slate-200">Prototyping & UI/UX Designing</p>
@@ -102,7 +102,7 @@
 
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent sm:order-4 lg:order-2" x-intersect="$el.classList.add('fadeInUp')">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-4 lg:order-2" x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
                         <p class="text-lg text-slate-200">C/C++</p>
@@ -112,7 +112,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent sm:order-2 lg:order-3" x-intersect="$el.classList.add('fadeInUp')">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-2 lg:order-3" x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Development</h2>
                         <p class="text-lg text-slate-200">HTML/CSS/JS</p>
@@ -122,7 +122,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent sm:order-3 lg:order-4" x-intersect="$el.classList.add('fadeInUp')">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-3 lg:order-4" x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
                         <p class="text-lg text-slate-200">Java</p>
@@ -132,7 +132,7 @@
                     </div>
 
                     <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] mainContent sm:order-5 lg:order-5" x-intersect="$el.classList.add('fadeInUp')">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-5 lg:order-5" x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Procedural programming</h2>
                         <p class="text-lg text-slate-200">PL-SQL</p>
@@ -144,7 +144,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer mt-24 mainContent">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-24 cursorHover">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
         </div>
     </div>
