--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
         </nav>
 
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="contact">
-            <h2 class="font-extrabold text-4xl py-8 xl:mx-110 text-white mainContent">Connect with me</h2>
+            <h2 class="font-extrabold text-4xl py-8 xl:mx-110 text-white cursorHover">Connect with me</h2>
 
             <div class="flex justify-center">
 
@@ -89,7 +89,7 @@
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -114,7 +114,7 @@
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" viewBox="0 0 272 194">
@@ -142,7 +142,7 @@
                     <a href="http://github.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -167,7 +167,7 @@
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -191,7 +191,7 @@
                     <a href="http://youtube.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -216,7 +216,7 @@
                     <a href="http://instagram.com/milindgoel15" target="blank">
 
                         <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl mainContent" x-intersect="$el.classList.add('fadeInUp')">
+                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -240,7 +240,7 @@
 
             </div>
 
-            <p class="text-slate-300 footer mt-24 mainContent">Made with <span class="text-red-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-24 cursorHover">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
         </div>
