disable snow, fix cursor on scroll

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 Hi! I'm Milind Goel
             </h2>
             <p class="text-xl text-white py-8 px-3 xl:mx-80 2xl:mx-110 md:text-2xl cursorHover">
-                a Web Developer, UI/UX Designer based in India
+                a Front-End Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
