--- a/skills.html
+++ b/skills.html
@@ -59,25 +59,28 @@
                 </button>
             </div>
 
-            <ul
-                class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350"
+            <ul class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350"
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
 
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -88,58 +91,87 @@
 
             <div class="flex justify-center">
 
-                <div class="grid grid-rows-5 gap-2 sm:grid-cols-2 sm:grid-rows-3 sm:mx-14 sm:mt-12 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
+                <div
+                    class="grid grid-rows-5 gap-2 sm:grid-cols-2 sm:grid-rows-3 sm:mx-14 sm:mt-12 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
-                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-1 lg:order-1" x-intersect="$el.classList.add('fadeInUp')">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Designing</h2>
                         <p class="text-lg text-slate-200">Prototyping & UI/UX Designing</p>
-                        <div style="margin-top: 2rem;" class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
-                            <span class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]" style="width: 60%"></span>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 60%"></span>
                         </div>
                     </div>
 
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
 
-
-                    <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-4 lg:order-2" x-intersect="$el.classList.add('fadeInUp')">
-
-                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
-                        <p class="text-lg text-slate-200">C/C++</p>
-                        <div style="margin-top: 2rem;" class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
-                            <span class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]" style="width: 30%"></span>
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">CSS Frameworks</h2>
+                        <p class="text-lg text-slate-200">TailwindCSS</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 85%"></span>
                         </div>
                     </div>
 
-                    <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-2 lg:order-3" x-intersect="$el.classList.add('fadeInUp')">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Development</h2>
                         <p class="text-lg text-slate-200">HTML/CSS/JS</p>
-                        <div style="margin-top: 2rem;" class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
-                            <span class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]" style="width: 70%"></span>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 70%"></span>
                         </div>
                     </div>
 
-                    <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-3 lg:order-4" x-intersect="$el.classList.add('fadeInUp')">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
 
-                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
-                        <p class="text-lg text-slate-200">Java</p>
-                        <div style="margin-top: 2rem;" class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
-                            <span class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]" style="width: 10%"></span>
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Module Bundler</h2>
+                        <p class="text-lg text-slate-200">Webpack</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 30%"></span>
                         </div>
                     </div>
 
-                    <div
-                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover sm:order-5 lg:order-5" x-intersect="$el.classList.add('fadeInUp')">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Procedural programming</h2>
                         <p class="text-lg text-slate-200">PL-SQL</p>
-                        <div style="margin-top: 2rem;" class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
-                            <span class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]" style="width: 70%"></span>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 70%"></span>
                         </div>
                     </div>
+
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
+
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">OOP</h2>
+                        <p class="text-lg text-slate-200">C/C++, Java, Python</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 20%"></span>
+                        </div>
+                    </div>
+                    
                 </div>
 
             </div>
