--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect with me</title>
-    <meta name="description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta name="description" content="Want to hire me or have a little chat? Feel free to contact!">
     <meta name="keywords" content="Milind Goel, milindgoel15, Web Developer">
     <meta name="title" content="Connect with me">
     <meta property="og:title" content="Connect with me">
-    <meta property="og:description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta property="og:description" content="Want to hire me or have a little chat? Feel free to contact!">
     <meta property="og:url" content="https://milindgoel15.github.io">
     <meta property="og:site_name" content="milindgoel15.github.io/contact">
 
