--- a/works.html
+++ b/works.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recent Works & Contributions</title>
-    <meta name="description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta name="description" content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
     <meta name="keywords" content="Milind Goel, milindgoel15, Web Developer">
     <meta name="title" content="Recent Works & Contributions">
     <meta property="og:title" content="Recent Works & Contributions">
-    <meta property="og:description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta property="og:description" content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
     <meta property="og:url" content="https://milindgoel15.github.io">
     <meta property="og:site_name" content="milindgoel15.github.io/works">
 
