add google site verification

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="A Web Developer, based in India building astonishing web experiences.">
     <meta property="og:url" content="https://milindgoel15.github.io">
     <meta property="og:site_name" content="milindgoel15.github.io">
+    <meta name="google-site-verification" content="WYAQh2p6n6VJfRhtdEE9Zmd9mWU8iDs_gmCz3BjrQ_o" />
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
